# app-machine-r718

./: .gitignore  BUILD_README.md  UI_USAGE.md  build_exe.py  context.md  main.py  pyproject.toml  requirements.txt
app_r718.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py
src/app_r718/: __init__.py  __main__.py
src/app_r718/core/: __init__.py  props_service.py  thermo_state.py
src/app_r718/modules/: __init__.py
src/app_r718/modules/condenser/: __init__.py  controller.py  model.py  view.py
src/app_r718/modules/ejector/: __init__.py  controller.py  model.py  model_v2.py  view.py
src/app_r718/modules/evaporator/: __init__.py  controller.py  model.py  view.py
src/app_r718/modules/expansion_valve/: __init__.py  controller.py  model.py  view.py
src/app_r718/modules/generator/: __init__.py  controller.py  model.py  view.py
src/app_r718/modules/pump/: __init__.py  controller.py  model.py  view.py
src/app_r718/modules/system_dashboard/: __init__.py  controller.py  model.py  view.py
src/app_r718/ui/: __init__.py  app.py
src/core/: __init__.py  thermo_state.py
test/: test_condenser.py  test_ejector.py  test_ejector_v2.py  test_evaporator.py  test_expansion_valve.py  test_generator.py  test_pump.py  test_system_cycle.py  test_thermo_state.py
