[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app_r718"
version = "0.1.0"
description = "Numerical simulation of R718 solar ejector refrigeration system"
readme = "context.md"
authors = [
    {name = "LISONGO SEMETE"}
]
requires-python = ">=3.10"
dependencies = [
    "CoolProp",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-html>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["app_r718*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "--html=reports/report.html --self-contained-html"
